# minosse

./: Cargo.toml  LICENSE  README.md
common/: Cargo.toml
common/src/: lib.rs
configurator/: Cargo.toml
configurator/src/: main.rs  process_affinity.rs  rule.rs  rule_list.rs  state.rs
service/: Cargo.toml
service/src/: main.rs  process_monitor.rs
src/: process_monitor.rs
wix/: License.rtf  main.wxs
