[package]
name = "minosse"
version = "0.1.0"
edition = "2021"
authors = ["Jacopo Libe <jacopo.libe@gmial.com>"]
description = "A Windows service that monitors process and changes their affinity and priority based on user defined rules."
license = "MIT"
repository = "https://github.com/artumino/minosse"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_regex = "1.1.0"
tokio = { version = "1.25.0", features = ["rt", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.12"
windows = { version = "0.44.0", features = ["Win32_System_Threading", "Win32_Foundation"] }
windows-service = "0.5.0"
wmi = "0.11.4"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
