[package]
name = "common"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
winapi = ["dep:windows"]

[dependencies]
anyhow.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_regex.workspace = true
windows = { workspace = true, optional = true }
strum.workspace = true